# timp-lab-4

./: .gitignore  Caddyfile  docker-compose.prod.yml
backend/: .env.example  pyproject.toml
backend/src/: app.py  config.py  ioc.py  main.py
backend/src/api/: deps.py
backend/src/api/routers/: admin.py  auth.py  feedback.py  health.py  queue.py  rooms.py  ws.py
backend/src/api/schemas/: admin.py  queue.py  rooms.py
backend/src/domain/: constants.py  entities.py  enums.py  repositories.py
backend/src/infrastructure/redis/: client.py  connection_manager.py  queue_manager.py  queue_repo.py
backend/src/services/: auth.py  dto.py  feedback.py  room.py  visitor.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_concurrency.py  test_feature_flows.py  test_queue_repo.py  test_rebalance_stats.py
backend/tests/unit/: test_admin.py  test_config.py  test_entities.py  test_new_features.py  test_room_service.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/public/: manifest.webmanifest  sw.js
frontend/src/: App.tsx  constants.ts  index.css  main.tsx
frontend/src/components/: BugReportModal.tsx  Footer.tsx  QrModal.tsx  RoomHeader.tsx  SettingsModal.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  IconButton.tsx  Modal.tsx  Select.tsx  Toggle.tsx
frontend/src/lib/: auth.ts  notifications.ts
frontend/src/pages/: AdminPage.tsx  ErrorPage.tsx  MainPage.tsx  UserPage.tsx
frontend/src/types/: api.ts
