[project]
name = "queue"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "dishka>=0.9.0",
    "fastapi>=0.136.1",
    "httpx>=0.27.0",
    "PyJWT>=2.10.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.47.0",
    "websockets>=16.0",
    "slowapi>=0.1.9",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.15.14",
    "aiosqlite>=0.22.1",
    "pre-commit>=4.6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: marks tests as integration tests (require running Redis/Postgres)",
]
filterwarnings = [
    "ignore::DeprecationWarning:slowapi",
    "ignore::DeprecationWarning:httpx",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008"]  # B008: Depends() в сигнатурах FastAPI — норм

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
